@@ -5,74 +5,63 @@ import com.polina.recipeservice.elasticsearch.RecipeSearchController;
 import com.polina.recipeservice.elasticsearch.RecipeSearchService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.ResponseEntity;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
 class RecipeSearchControllerTest {
     @Mock
     private RecipeSearchService recipeSearchService;
     @InjectMocks
     private RecipeSearchController recipeSearchController;
-    private RecipeDocument recipeDocument;
-
     @BeforeEach
     void setUp() {
-        recipeDocument = new RecipeDocument();
-        recipeDocument.setId("1");
-        recipeDocument.setTitle("Pasta");
-        recipeDocument.setCuisine("Italian");
-        recipeDocument.setAverageRating(4.5);
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    void searchByTitle_ReturnsMatchingRecipes() {
-        when(recipeSearchService.filterRecipesByTitle("Pasta")).thenReturn(List.of(recipeDocument));
-        ResponseEntity<List<RecipeDocument>> response = recipeSearchController.searchByTitle("Pasta");
+    void testSearchRecipes() {
+        Page<RecipeDocument> mockPage = new PageImpl<>(Collections.emptyList());
+        when(recipeSearchService.searchRecipes
+                (any(), any(), any(), any(), any(), any(), anyInt(), anyInt(), any()))
+                .thenReturn(mockPage);
+        ResponseEntity<Page<RecipeDocument>> response = recipeSearchController
+                .searchRecipes(null, null, null, null, null, null, 0, 10, "rating");
         assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().size());
-        assertEquals("Pasta", response.getBody().get(0).getTitle());
+        assertEquals(mockPage, response.getBody());
     }
 
     @Test
-    void searchByCuisineAndRating_WithCuisineOnly() {
-        when(recipeSearchService.filterRecipesByCuisineAndRating("Italian", null))
-                .thenReturn(List.of(recipeDocument));
-        ResponseEntity<List<RecipeDocument>> response = recipeSearchController
-                .searchByCuisineAndRating("Italian", null);
+    void testGetRecipeById_Found() {
+        RecipeDocument mockRecipe = new RecipeDocument();
+        when(recipeSearchService.findRecipeById("1")).thenReturn(Optional.of(mockRecipe));
+        ResponseEntity<RecipeDocument> response = recipeSearchController.getRecipeById("1");
         assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().size());
-        assertEquals("Italian", response.getBody().get(0).getCuisine());
+        assertEquals(mockRecipe, response.getBody());
     }
 
     @Test
-    void searchByCuisineAndRating_WithMinRatingOnly() {
-        when(recipeSearchService.filterRecipesByCuisineAndRating(null, 4.0))
-                .thenReturn(List.of(recipeDocument));
-        ResponseEntity<List<RecipeDocument>> response = recipeSearchController
-                .searchByCuisineAndRating(null, 4.0);
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().size());
-        assertTrue(response.getBody().get(0).getAverageRating() >= 4.0);
+    void testGetRecipeById_NotFound() {
+        when(recipeSearchService.findRecipeById("1")).thenReturn(Optional.empty());
+        ResponseEntity<RecipeDocument> response = recipeSearchController.getRecipeById("1");
+        assertEquals(404, response.getStatusCodeValue());
     }
 
     @Test
-    void searchByCuisineAndRating_WithBothFilters() {
-        when(recipeSearchService.filterRecipesByCuisineAndRating("Italian", 4.0))
-                .thenReturn(List.of(recipeDocument));
-        ResponseEntity<List<RecipeDocument>> response = recipeSearchController
-                .searchByCuisineAndRating("Italian", 4.0);
+    void testGetRecipesGroupedByCuisine() {
+        Map<String, List<RecipeDocument>> mockMap = new HashMap<>();
+        when(recipeSearchService.groupRecipesByCuisine()).thenReturn(mockMap);
+        ResponseEntity<Map<String, List<RecipeDocument>>> response = recipeSearchController
+                .getRecipesGroupedByCuisine();
         assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().size());
-        assertEquals("Italian", response.getBody().get(0).getCuisine());
-        assertTrue(response.getBody().get(0).getAverageRating() >= 4.0);
+        assertEquals(mockMap, response.getBody());
     }
 }
